--- a/instrumentos.html
+++ b/instrumentos.html
@@ -62,6 +62,66 @@
     <section class="main-navigation mt-5">
         <div class="container">
             <h1 class="text-purple font-weight-bold">Instrumentos musicais</h1>
+            <ul class="list-unstyled">
+                <li class="media mt-5">
+                    <img src="img/instrumentos/violao.jpg" class="mr-3" alt="..." width="150px">
+                    <div class="media-body">
+                        <h5 class="mt-0 mb-1">Violão</h5>
+                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+                        purus odio, vestibulum in vulputate at.<br>
+                        <button class="btn btn-default mt-2"><i class="far fa-play-circle"></i> Ouvir som</button>
+                    </div>
+                </li>
+
+                <hr class="mt-5 purple-clear">
+                <li class="media mt-5">
+                    <img src="img/instrumentos/violao.jpg" class="mr-3" alt="..." width="150px">
+                    <div class="media-body">
+                        <h5 class="mt-0 mb-1">Violão</h5>
+                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+                        purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+                        vulputate fringilla. Donec lacinia congue felis in faucibus.<br>
+                        <button class="btn btn-default mt-2"><i class="far fa-play-circle"></i> Ouvir som</button>
+                    </div>
+                </li>
+
+                <hr class="mt-5 purple-clear">
+                <li class="media mt-5">
+                    <img src="img/instrumentos/violao.jpg" class="mr-3" alt="..." width="150px">
+                    <div class="media-body">
+                        <h5 class="mt-0 mb-1">Violão</h5>
+                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+                        purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+                        vulputate fringilla. Donec lacinia congue felis in faucibus.<br>
+                        <button class="btn btn-default mt-2"><i class="far fa-play-circle"></i> Ouvir som</button>
+                    </div>
+                </li>
+
+                <hr class="mt-5 purple-clear">
+                <li class="media mt-5">
+                    <img src="img/instrumentos/violao.jpg" class="mr-3" alt="..." width="150px">
+                    <div class="media-body">
+                        <h5 class="mt-0 mb-1">Violão</h5>
+                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+                        purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+                        vulputate fringilla. Donec lacinia congue felis in faucibus.<br>
+                        <button class="btn btn-default mt-2"><i class="far fa-play-circle"></i> Ouvir som</button>
+                    </div>
+                </li>
+
+                <hr class="mt-5 purple-clear">
+                <li class="media mt-5">
+                    <img src="img/instrumentos/violao.jpg" class="mr-3" alt="..." width="150px">
+                    <div class="media-body">
+                        <h5 class="mt-0 mb-1">Violão</h5>
+                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras
+                        purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi
+                        vulputate fringilla. Donec lacinia congue felis in faucibus.<br>
+                        <button class="btn btn-default mt-2"><i class="far fa-play-circle"></i> Ouvir som</button>
+                    </div>
+                </li>
+
+            </ul>
         </div>
     </section>
 
