--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
                         </li>
                     </ul>
                     <div id="login" class="login justify-content-end">
-                        <a href="login.html"><button class="btn" data-toggle="modal"
-                                data-target="#exampleModal><i class=" fas fa-sign-in-alt"></i>
+                        <a href="login.html"><button class="btn"><i class=" fas fa-sign-in-alt"></i>
                                 Login</button></a>
                         <a href="index.html#cadastro"><button class="btn"><i class="fas fa-user-plus"></i>
                                 Cadastre-se</button></a>
