--- a/editar-conta.html
+++ b/editar-conta.html
@@ -50,8 +50,7 @@
                         </li>
                     </ul>
                     <div id="login" class="login justify-content-end hide">
-                        <a href="login.html"><button class="btn" data-toggle="modal"
-                                data-target="#exampleModal><i class=" fas fa-sign-in-alt"></i>
+                        <a href="login.html"><button class="btn"><i class=" fas fa-sign-in-alt"></i>
                                 Login</button></a>
                         <a href="index.html#cadastro"><button class="btn"><i class="fas fa-user-plus"></i>
                                 Cadastre-se</button></a>
