--- a/editar-conta.html
+++ b/editar-conta.html
@@ -32,8 +32,7 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Música
                             </a>
-                            <div id="dropdown-menu" class="dropdown-menu bg-transparent"
-                                aria-labelledby="navbarDropdown">
+                            <div id="dropdown-menu" class="dropdown-menu purple-clear" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item text-light" href="historia.html">História</a>
                                 <a class="dropdown-item text-light" href="estilos.html">Estilos</a>
                                 <a class="dropdown-item text-light" href="instrumentos.html">Instrumentos</a>
