--- a/cadastro_anunciante.html
+++ b/cadastro_anunciante.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MusicAll - Alterar dados</title>
+    <title>MusicAll - Cadastro anunciante</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
@@ -24,7 +24,7 @@
 
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item dropdown">
@@ -48,27 +48,13 @@
                             <a class="nav-link" href="lojas.html">Lojas</a>
                         </li>
                     </ul>
-                    <div id="login" class="login justify-content-end hide">
+                    <div id="login" class="login justify-content-end">
                         <a href="login.html"><button class="btn"><i class=" fas fa-sign-in-alt"></i>
                                 Login</button></a>
                         <a href="index.html#cadastro"><button class="btn"><i class="fas fa-user-plus"></i>
                                 Cadastre-se</button></a>
                     </div>
-                    <div id="logged" class="login justify-content-end">
-                        Bem vindo, Usuário <i class="fas fa-user-circle"></i>
-                        <div class="user-options">
-                            <ul>
 
-                                <li>
-                                    <a href="editar-conta.html"><i class="fas fa-user-edit"></i> Alterar dados</a>
-                                </li>
-                                <li>
-                                    <a href="index.html"><i class="fas fa-sign-out-alt" onClick="logOff();"></i>
-                                        Sair</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
                 </div>
             </div>
         </nav>
@@ -78,41 +64,45 @@
         <div class="container edit-user">
             <div class="row">
                 <div class="col-lg-6">
-                    <h1 class="mt-5 text-purple font-weight-bold">Alterar dados </h1>
+                    <h1 class="mt-5 text-purple font-weight-bold">Cadastro anunciante</h1>
                     <form class="mt-5">
                         <div class="form-group">
                             <label for="formGroupExampleInput">Nome de usuário</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput" value="Usuário" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="formGroupExampleInput1">E-mail</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput1" value="email@email.com"
+                            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Usuário"
                                 required>
                         </div>
                         <div class="form-group">
-                            <label for="formGroupExampleInput2">Senha atual</label>
-                            <input type="password" class="form-control" id="formGroupExampleInput2"
-                                placeholder="Senha atual" required>
+                            <label for="formGroupExampleInput">Nome completo</label>
+                            <input type="text" class="form-control" id="formGroupExampleInput"
+                                placeholder="Zezin dos santos" required>
                         </div>
                         <div class="form-group">
-                            <label for="formGroupExampleInput3">Nova senha</label>
-                            <input type="password" class="form-control" id="formGroupExampleInput3"
-                                placeholder="Nova senha" required>
+                            <label for="formGroupExampleInput">CNPJ</label>
+                            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="CNPJ"
+                                required>
                         </div>
-                        <button type="submit" id="cadastroBtn" class="btn btn-default">Salvar</button>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput1">E-mail</label>
+                            <input type="text" class="form-control" id="formGroupExampleInput1"
+                                placeholder="email@email.com" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput2">Senha</label>
+                            <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="Senha"
+                                required>
+                        </div>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput3">Tipo de anúncio</label><br>
+                            <select class="form-control">
+                                <option>Selecione um tipo de anúncio</option>
+                                <option>Escola</option>
+                                <option>Loja</option>
+                                <option>Ainda não decidi</option>
+                            </select>
+                        </div>
+                        <button onClick="redirectAnunciante()" type="submit" id="cadastroBtn"
+                            class="btn btn-default">Cadastrar</button>
                     </form>
-                </div>
-                <div class="col-lg-6">
-                    <h1 class="mt-5 text-purple font-weight-bold">Preferências musicais</h1>
-                    <p>Clique para definir os gêneros favoritos</p>
-                    <button onClick="btnActive(this)" class="btn-music btn">Classica</button>
-                    <button onClick="btnActive(this)" class="btn-music btn">Pagode</button>
-                    <button onClick="btnActive(this)" class="btn-music btn">Sertanejo</button>
-                    <button onClick="btnActive(this)" class="btn-music btn">Rock</button>
-                    <button onClick="btnActive(this)" class="btn-music btn">Indie</button>
-                    <button onClick="btnActive(this)" class="btn-music btn">Funk</button>
-                    <br><br>
-                    <button type="submit" id="cadastroBtn" class="btn btn-default">Salvar preferências</button>
                 </div>
             </div>
         </div>
