--- a/criar-anuncio.html
+++ b/criar-anuncio.html
@@ -24,7 +24,7 @@
 
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item dropdown">
@@ -48,19 +48,16 @@
                             <a class="nav-link" href="lojas.html">Lojas</a>
                         </li>
                     </ul>
-                    <div id="login" class="login justify-content-end hide">
-                        <a href="login.html"><button class="btn"><i class=" fas fa-sign-in-alt"></i>
-                                Login</button></a>
-                        <a href="index.html#cadastro"><button class="btn"><i class="fas fa-user-plus"></i>
-                                Cadastre-se</button></a>
-                    </div>
                     <div id="logged" class="login justify-content-end">
                         Bem vindo, Usuário <i class="fas fa-user-circle"></i>
                         <div class="user-options">
                             <ul>
-
                                 <li>
-                                    <a href="editar-conta.html"><i class="fas fa-user-edit"></i> Alterar dados</a>
+                                    <a href="editar-conta-anunciante.html"><i class="fas fa-user-edit"></i> Alterar
+                                        dados</a>
+                                </li>
+                                <li>
+                                    <a href="criar-anuncio.html"><i class="fas fa-bullhorn"></i> Criar anúncio</a>
                                 </li>
                                 <li>
                                     <a href="index.html"><i class="fas fa-sign-out-alt" onClick="logOff();"></i>
@@ -76,44 +73,8 @@
 
     <div class="main-navigation">
         <div class="container edit-user">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h1 class="mt-5 text-purple font-weight-bold">Alterar dados </h1>
-                    <form class="mt-5">
-                        <div class="form-group">
-                            <label for="formGroupExampleInput">Nome de usuário</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput" value="Usuário" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="formGroupExampleInput1">E-mail</label>
-                            <input type="text" class="form-control" id="formGroupExampleInput1" value="email@email.com"
-                                required>
-                        </div>
-                        <div class="form-group">
-                            <label for="formGroupExampleInput2">Senha atual</label>
-                            <input type="password" class="form-control" id="formGroupExampleInput2"
-                                placeholder="Senha atual" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="formGroupExampleInput3">Nova senha</label>
-                            <input type="password" class="form-control" id="formGroupExampleInput3"
-                                placeholder="Nova senha" required>
-                        </div>
-                        <button type="submit" id="cadastroBtn" class="btn btn-default">Salvar</button>
-                    </form>
-                </div>
-                <div class="col-lg-6">
-                    <h1 class="mt-5 text-purple font-weight-bold">Preferências musicais</h1>
-                    <p>Clique para definir os gêneros favoritos</p>
-                    <button onClick="btnActive(this)" class="btn-music btn">Classica</button>
-                    <button onClick="btnActive(this)" class="btn-music btn">Pagode</button>
-                    <button onClick="btnActive(this)" class="btn-music btn">Sertanejo</button>
-                    <button onClick="btnActive(this)" class="btn-music btn">Rock</button>
-                    <button onClick="btnActive(this)" class="btn-music btn">Indie</button>
-                    <button onClick="btnActive(this)" class="btn-music btn">Funk</button>
-                    <br><br>
-                    <button type="submit" id="cadastroBtn" class="btn btn-default">Salvar preferências</button>
-                </div>
+            <div class="row mt-5">
+                Criar anuncio
             </div>
         </div>
     </div>
