--- a/index-logado-anunciante.html
+++ b/index-logado-anunciante.html
@@ -61,20 +61,15 @@
                             <a class="nav-link" href="lojas.html">Lojas</a>
                         </li>
                     </ul>
-                    <div id="login" class="login justify-content-end">
-                        <a href="login.html"><button class="btn"><i class=" fas fa-sign-in-alt"></i>
-                                Login</button></a>
-                        <a href="index.html#cadastro"><button class="btn"><i class="fas fa-user-plus"></i>
-                                Cadastre-se</button></a>
-                    </div>
-                    <div id="logged" class="login justify-content-end hide">
+                    <div id="logged" class="login justify-content-end">
                         Bem vindo, Usuário <i class="fas fa-user-circle"></i>
                         <div class="user-options">
                             <ul>
                                 <li>
-                                    <a href="editar-conta.html"><i class="fas fa-user-edit"></i> Alterar dados</a>
+                                    <a href="editar-conta-anunciante.html"><i class="fas fa-user-edit"></i> Alterar
+                                        dados</a>
                                 </li>
-                                <li class="hide">
+                                <li>
                                     <a href="criar-anuncio.html"><i class="fas fa-bullhorn"></i> Criar anúncio</a>
                                 </li>
                                 <li>
@@ -155,52 +150,6 @@
         </div>
 
     </section>
-    <div class="division container-fluid purple-clear">
-
-    </div>
-
-    <div id="cadastro" class="sign-up container">
-        <div class="row">
-            <!-- cadastro -->
-            <div class="col-lg-6">
-                <h2 class="text-center">Cadastre-se </h2>
-                <form class="mt-5">
-                    <div class="form-group">
-                        <label for="formGroupExampleInput">Nome de usuário</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ex: musicall25"
-                            required>
-                    </div>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput2">E-mail</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput1"
-                            placeholder="Ex: musicall@gmail.com" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput2">Senha</label>
-                        <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="Senha"
-                            required>
-                    </div>
-                    <button onClick="redirect()" type="submit" id="cadastroBtn"
-                        class="btn btn-default">Cadastrar</button>
-
-
-
-                    <p class="mt-3">Já tem conta? <a href="login.html">Faça login</a> /<a
-                            href="cadastro_anunciante.html"> Quero anunciar</a></p>
-
-                </form>
-            </div>
-
-            <div class="col-lg-6 social-login">
-                <h2 class="text-center">Ou faça login com sua rede social favorita </h2>
-                <div class="mt-5 text-center">
-                    <i onClick="redirect()" class="fab fa-facebook-square"></i>
-                    <i onClick="redirect()" class="fab fa-linkedin"></i>
-                    <i onClick="redirect()" class="fab fa-twitter-square"></i>
-                </div>
-            </div>
-        </div>
-    </div>
     <footer class="container-fluid">
         <div class="container text-center">
             <div class="row">
