--- a/login.html
+++ b/login.html
@@ -4,28 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MusicAll</title>
+    <title>MusicAll - Login</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <link rel="stylesheet" href="/css/main.css" />
-    <!-- <link rel="stylesheet" href="/css/animations.css" /> -->
 </head>
 
-<body>
-    <div class="top-bg purple-clear">
-        <div class="content-top">
-            <h1>Onde surgiu a música que você ouve?</h1>
-        </div>
-        <!--
-        <img src="img/nota.png" class="shape">
-        <img src="img/nota.png" class="shape-2">
-        <img src="img/nota.png" class="shape-3">
-        <img src="img/nota.png" class="shape-4">
-        -->
-    </div>
-    <div class="top container-fluid">
-        <nav id="nav" class="navbar navbar-expand-lg navbar-dark fixed-top">
+<body class="font">
+    <div class="container-fluid">
+        <nav id="nav" class="navbar navbar-expand-lg navbar-dark fixed-top  purple-clear">
             <div class="container">
                 <a class="navbar-brand" href="index.html"><i class="fas fa-headphones-alt"></i> MusicAll </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -36,7 +24,7 @@
 
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item dropdown">
@@ -44,8 +32,7 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Música
                             </a>
-                            <div id="dropdown-menu" class="dropdown-menu bg-transparent"
-                                aria-labelledby="navbarDropdown">
+                            <div id="dropdown-menu" class="dropdown-menu purple-clear" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item text-light" href="historia.html">História</a>
                                 <a class="dropdown-item text-light" href="estilos.html">Estilos</a>
                                 <a class="dropdown-item text-light" href="instrumentos.html">Instrumentos</a>
@@ -54,7 +41,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="piano.html">Piano digital</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" href="escolas.html">Escolas</a>
                         </li>
                         <li class="nav-item">
@@ -72,9 +59,10 @@
                         <div class="user-options">
                             <ul>
                                 <li>
-                                    <a href="editar-conta.html"><i class="fas fa-user-edit"></i> Alterar dados</a>
+                                    <a href="editar-conta-anunciante.html"><i class="fas fa-user-edit"></i> Alterar
+                                        dados</a>
                                 </li>
-                                <li class="hide">
+                                <li>
                                     <a href="criar-anuncio.html"><i class="fas fa-bullhorn"></i> Criar anúncio</a>
                                 </li>
                                 <li>
@@ -85,122 +73,41 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
             </div>
         </nav>
 
     </div>
-    <section class="piano-home container mt-5">
-        <div class="row">
-            <div class="col-lg-6">
-                <h2>Aprenda com a gente</h2>
-                <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é... Já vivi muito sem
-                    dinheiro, já vivi muito com dinheiro. -Jornalista: Coloca esse dinheiro na poupança que a senhora
-                    ganha R$10 mil por mês. -Dilma: O que que é R$10 mil?</p>
-            </div>
-            <div class="col-lg-6">
-                <h2>Piano digital</h2>
-                <img class="mt-2" src="img/piano.png" width="100%" />
-                <a href="piano.html"><button class="btn btn-default mt-3">Tocar agora!</button></a>
-            </div>
-        </div>
-    </section>
-    <div class="division container-fluid purple-clear">
 
-    </div>
-    <section class="study container">
-        <div class="row">
-            <div class="col-md-12">
-                <h2>Quer estudar música?</h2>
-                <div class="row pt-3">
-                    <div class="col-md-6">
-                        <h4>Encontre uma escola</h4>
-                        <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
-                            Já vivi
-                            muito
-                            sem
-                            dinheiro.</p>
-                    </div>
-                    <div class="col-md-6">
-                        <h4>Encontre uma escola</h4>
-                        <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
-                            Já vivi
-                            muito
-                            sem
-                            dinheiro.</p>
-                    </div>
-                    <div class="col-md-6">
-                        <h4>Encontre uma escola</h4>
-                        <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
-                            Já vivi
-                            muito
-                            sem
-                            dinheiro.</p>
-                    </div>
-                    <div class="col-md-6">
-                        <h4>Encontre uma escola</h4>
-                        <p>Eu dou dinheiro pra minha filha. Eu dou dinheiro pra ela viajar, então é... é...
-                            Já vivi
-                            muito
-                            sem
-                            dinheiro.</p>
-                    </div>
+    <section class="main-navigation mt-5">
+        <div class="container">
+            <h3 class="text-purple font-weight-bold mt-5">Insira seu usuário e senha para continuar</h3>
+            <div class="row">
+                <div class="col-lg-12">
+                    <form class="form-login">
+                        <input class="form-control mt-1" type="text" value="Usuário" required>
+                        <input class="form-control mt-1" type="text" value="Senha" required>
+                    </form>
+                    <button type="submit" onClick="redirect()" class="btn btn-default mt-2">Entrar</button>
+                    <button class="btn btn-default mt-2">Esqueci a senha</button>
 
+
+                    <h5 class="mt-5">Simulações:</h5>
+                    <button onClick="redirect()" class="btn btn-default mt-2">Usuário comum</button>
+                    <button onClick="redirectAnunciante()" class="btn btn-default mt-2">Anunciante</button>
+                    <button onClick="redirectAdmin()" class="btn btn-default mt-2">Administrador</button>
                 </div>
-
-            </div>
-        </div>
-
-    </section>
-    <div class="division container-fluid purple-clear">
-
-    </div>
-
-    <div id="cadastro" class="sign-up container">
-        <div class="row">
-            <!-- cadastro -->
-            <div class="col-lg-6">
-                <h2 class="text-center">Cadastre-se </h2>
-                <form class="mt-5">
-                    <div class="form-group">
-                        <label for="formGroupExampleInput">Nome de usuário</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ex: musicall25"
-                            required>
+                <div class="col-lg-12 social-login mt-5">
+                    <h3 class="text-purple font-weight-bold">Ou faça login com sua rede social favorita </h3>
+                    <div class="">
+                        <i onClick="redirect()" class="fab fa-facebook-square"></i>
+                        <i onClick="redirect()" class="fab fa-linkedin"></i>
+                        <i onClick="redirect()" class="fab fa-twitter-square"></i>
                     </div>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput2">E-mail</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput1"
-                            placeholder="Ex: musicall@gmail.com" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput2">Senha</label>
-                        <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="Senha"
-                            required>
-                    </div>
-                    <button onClick="redirect()" type="submit" id="cadastroBtn"
-                        class="btn btn-default">Cadastrar</button>
-
-
-
-                    <p class="mt-3">Já tem conta? <a href="login.html">Faça login</a> /<a
-                            href="cadastro_anunciante.html"> Quero anunciar</a></p>
-
-                </form>
-            </div>
-
-            <div class="col-lg-6 social-login">
-                <h2 class="text-center">Ou faça login com sua rede social favorita </h2>
-                <div class="mt-5 text-center">
-                    <i onClick="redirect()" class="fab fa-facebook-square"></i>
-                    <i onClick="redirect()" class="fab fa-linkedin"></i>
-                    <i onClick="redirect()" class="fab fa-twitter-square"></i>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+
     <footer class="container-fluid">
         <div class="container text-center">
             <div class="row">
@@ -227,7 +134,7 @@
 
                 </div>
                 <div class="col-lg-4 footer-box">
-                    <h3><i class="far fa-bell"></i>Recebas as novidades</h3>
+                    <h3><i class="far fa-bell"></i> Recebas as novidades</h3>
                     <form>
                         <input type="text" class="form-control mt-3" placeholder="Ex: musicall@gmail.com" required />
                         <button class="mt-2 btn btn-default btn-block">Inscrever-se</button>
