--- a/editar-conta.html
+++ b/editar-conta.html
@@ -58,7 +58,6 @@
                         Bem vindo, Usuário <i class="fas fa-user-circle"></i>
                         <div class="user-options">
                             <ul>
-
                                 <li>
                                     <a href="editar-conta.html"><i class="fas fa-user-edit"></i> Alterar dados</a>
                                 </li>
@@ -79,7 +78,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h1 class="mt-5 text-purple font-weight-bold">Alterar dados </h1>
-                    <form class="mt-5">
+                    <form class="mt-4">
                         <div class="form-group">
                             <label for="formGroupExampleInput">Nome de usuário</label>
                             <input type="text" class="form-control" id="formGroupExampleInput" value="Usuário" required>
@@ -104,7 +103,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h1 class="mt-5 text-purple font-weight-bold">Preferências musicais</h1>
-                    <p>Clique para definir os gêneros favoritos</p>
+                    <p class="mt-4">Clique para definir os gêneros favoritos</p>
                     <button onClick="btnActive(this)" class="btn-music btn">Classica</button>
                     <button onClick="btnActive(this)" class="btn-music btn">Pagode</button>
                     <button onClick="btnActive(this)" class="btn-music btn">Sertanejo</button>
