--- a/criar-anuncio.html
+++ b/criar-anuncio.html
@@ -73,8 +73,65 @@
 
     <div class="main-navigation">
         <div class="container edit-user">
-            <div class="row mt-5">
-                Criar anuncio
+            <div class="row">
+                <div class="col-lg-6">
+                    <h1 class="mt-5 text-purple font-weight-bold">Criar anúncio</h1>
+                    <form class="mt-4">
+                        <div class="form-group">
+                            <label for="formGroupExampleInput">Nome da escola/loja</label>
+                            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nome"
+                                required>
+                        </div>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput">Endereço</label>
+                            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Endereço"
+                                required>
+                        </div>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput3">Cidade</label><br>
+                            <select class="form-control">
+                                <option>Selecione uma cidade</option>
+                                <option>Curitiba</option>
+                                <option>São Paulo</option>
+                                <option>Porto Alegre</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput">Telefone</label>
+                            <input type="text" class="form-control" id="formGroupExampleInput" value="(xx) XXXX-XXXX"
+                                required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="formGroupExampleInput1">E-mail</label>
+                            <input type="text" class="form-control" id="formGroupExampleInput1" value="email@email.com"
+                                required>
+                        </div>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput3">Tipo de anúncio</label><br>
+                            <select class="form-control">
+                                <option>Selecione um tipo de anúncio</option>
+                                <option>Escola</option>
+                                <option>Loja</option>
+                                <option>Ainda não decidi</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput2">Senha atual (Obrigatório)</label>
+                            <input type="password" class="form-control" id="formGroupExampleInput2"
+                                placeholder="Senha atual" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput2">Foto da escola/loja</label>
+                            <input class="" type="file">
+                        </div>
+                        <button type="submit" id="cadastroBtn" class="btn btn-default">Enviar para análise</button>
+                    </form>
+                </div>
+                <div class="col-lg-6">
+                    <h1 class="mt-5 text-purple font-weight-bold">Informações para anunciantes</h1>
+
+                </div>
             </div>
         </div>
     </div>
