--- a/editar-conta-anunciante.html
+++ b/editar-conta-anunciante.html
@@ -57,7 +57,7 @@
                                         dados</a>
                                 </li>
                                 <li>
-                                    <a href="criar-anuncio.html"><i class="fas fa-bullhorn"></i> Criar anúncio</a>
+                                    <a href="criar-anuncio.html"><i class="fas fa-bullhorn"></i> Anúncios</a>
                                 </li>
                                 <li>
                                     <a href="index.html"><i class="fas fa-sign-out-alt" onClick="logOff();"></i>
@@ -94,15 +94,6 @@
                             <label for="formGroupExampleInput1">E-mail</label>
                             <input type="text" class="form-control" id="formGroupExampleInput1" value="email@email.com"
                                 required>
-                        </div>
-                        <div class="form-group">
-                            <label for="formGroupExampleInput3">Tipo de anúncio</label><br>
-                            <select class="form-control">
-                                <option>Selecione um tipo de anúncio</option>
-                                <option>Escola</option>
-                                <option>Loja</option>
-                                <option>Ainda não decidi</option>
-                            </select>
                         </div>
                         <div class="form-group">
                             <label for="formGroupExampleInput2">Senha atual (Obrigatório)</label>
