--- a/index-logado-anunciante.html
+++ b/index-logado-anunciante.html
@@ -70,7 +70,7 @@
                                         dados</a>
                                 </li>
                                 <li>
-                                    <a href="criar-anuncio.html"><i class="fas fa-bullhorn"></i> Criar anúncio</a>
+                                    <a href="criar-anuncio.html"><i class="fas fa-bullhorn"></i> Anúncios</a>
                                 </li>
                                 <li>
                                     <a href="index.html"><i class="fas fa-sign-out-alt" onClick="logOff();"></i>
